external-crates/move/crates/move-compiler/tests/move_check/expansion/use_spec_schema_invalid_as.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:3:5
  │
3 │     spec schema Foo<T> {
  │     ^^^^
  │     │
  │     Unexpected 'spec'
  │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

error[E03003]: unbound module member
  ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:9:18
  │
2 │ module X {
  │        - Module '0x2::X' declared here
  ·
9 │     use 0x2::X::{Foo as foo};
  │                  ^^^ Invalid 'use'. Unbound member 'Foo' in module '0x2::X'

error[E01002]: unexpected token
   ┌─ tests/move_check/expansion/use_spec_schema_invalid_as.move:12:5
   │
12 │     spec t {
   │     ^^^^
   │     │
   │     Unexpected 'spec'
   │     Expected a module member: 'use', 'friend', 'const', 'fun', or 'struct'

